--- a/backend/package.json
+++ b/backend/package.json
@@ -1,21 +1,36 @@
 {
   "name": "solar-assessment-backend",
   "version": "1.0.0",
+  "description": "Backend API for Solar Assessment Application",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
-    "test": "jest"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "lint": "eslint src/"
   },
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "axios": "^1.4.0",
-    "helmet": "^7.0.0",
-    "express-rate-limit": "^6.7.0",
-    "pg": "^8.11.0",
-    "@tensorflow/tfjs-node": "^4.10.0",
-    "sharp": "^0.32.0"
+    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "axios": "^1.6.0",
+    "express-rate-limit": "^7.1.5",
+    "compression": "^1.7.4",
+    "morgan": "^1.10.0",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "node-cache": "^5.1.2",
+    "sharp": "^0.33.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "eslint": "^8.56.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
