--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,65 @@
+# Dependencies
+node_modules/
+package-lock.json
+yarn.lock
 
+# Production
+build/
+dist/
+*.production.js
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Database
+*.sqlite
+*.db
+
+# OS Files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.project
+.classpath
+.c9/
+
+# Testing
+coverage/
+.nyc_output
+
+# Cache
+.npm
+.eslintcache
+
+# Docker
+docker-compose.override.yml
+.dockerignore
