--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,5 @@
 services:
+  # Backend API
   - type: web
     name: solar-assessment-backend
     env: node
@@ -7,18 +8,39 @@ services:
     rootDir: backend
     buildCommand: npm install
     startCommand: npm start
+    healthCheckPath: /health
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 3001
       - key: CORS_ORIGIN
         value: https://solar-assessment-frontend.onrender.com
       - key: MOCK_EXTERNAL_APIS
         value: "false"
-  - type: static_site
+      - key: RATE_LIMIT_WINDOW_MS
+        value: "900000"
+      - key: RATE_LIMIT_MAX_REQUESTS
+        value: "100"
+      - key: WEATHER_CACHE_TTL_MS
+        value: "3600000"
+      - key: BRREG_API_URL
+        value: https://data.brreg.no/enhetsregisteret/api
+      - key: KARTVERKET_ADDRESS_API
+        value: https://ws.geonorge.no/adresser/v1
+      - key: KARTVERKET_WMS_URL
+        value: https://wms.geonorge.no/skwms1/wms.nib
+      - key: KARTVERKET_ELEVATION_API
+        value: https://ws.geonorge.no/hoydedata/v1
+
+  # Frontend Static Site
+  - type: web
     name: solar-assessment-frontend
+    env: static
+    region: frankfurt
     rootDir: frontend
-    buildCommand: npm install && npm run build
-    publishDir: build
+    buildCommand: npm ci && npm run build
+    staticPublishPath: ./build
     envVars:
       - key: REACT_APP_API_URL
         value: https://solar-assessment-backend.onrender.com/api
@@ -27,4 +49,11 @@ services:
     headers:
       - path: /*
         name: Cache-Control
-        value: no-cache
+        value: public, max-age=0, must-revalidate
+      - path: /static/*
+        name: Cache-Control
+        value: public, max-age=31536000, immutable
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
