--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,5 @@
 services:
-  # Backend API
+  # Backend API Service
   - type: web
     name: solar-assessment-backend
     env: node
@@ -32,6 +32,8 @@ services:
         value: https://wms.geonorge.no/skwms1/wms.nib
       - key: KARTVERKET_ELEVATION_API
         value: https://ws.geonorge.no/hoydedata/v1
+      - key: API_BASE_URL
+        value: https://solar-assessment-backend.onrender.com/api
 
   # Frontend Static Site
   - type: web
@@ -39,20 +41,14 @@ services:
     env: static
     region: frankfurt
     rootDir: frontend
-    buildCommand: npm ci && npm run build
+    buildCommand: npm install && npm run build
     staticPublishPath: ./build
+    pullRequestPreviewsEnabled: true
     envVars:
       - key: REACT_APP_API_URL
         value: https://solar-assessment-backend.onrender.com/api
       - key: REACT_APP_ENVIRONMENT
         value: production
-    headers:
-      - path: /*
-        name: Cache-Control
-        value: public, max-age=0, must-revalidate
-      - path: /static/*
-        name: Cache-Control
-        value: public, max-age=31536000, immutable
     routes:
       - type: rewrite
         source: /*
