--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,6 +4,12 @@ PORT=3001
 CORS_ORIGIN=http://localhost:3000
 API_ACCESS_KEY=
 
+# API Base URL (brukes for å generere proxy URLs til satellittbilder)
+# Lokal utvikling:
+API_BASE_URL=http://localhost:3001/api
+# Produksjon (Render):
+# API_BASE_URL=https://solar-assessment-backend.onrender.com/api
+
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
