--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,7 @@
+# ========================================
+# backend/.env.example
+# ========================================
+
 # Backend environment variables
 NODE_ENV=development
 PORT=3001
@@ -22,5 +26,21 @@ BRREG_API_URL=https://data.brreg.no/enhetsregisteret/api
 KARTVERKET_ADDRESS_API=https://ws.geonorge.no/adresser/v1
 KARTVERKET_WMS_URL=https://wms.geonorge.no/skwms1/wms.nib
 KARTVERKET_ELEVATION_API=https://ws.geonorge.no/hoydedata/v1
-MOCK_EXTERNAL_APIS=true
-MOCK_SATELLITE_IMAGE_URL=
+
+# Mock mode (set to true for development without external API access)
+MOCK_EXTERNAL_APIS=false
+
+# Mock satellite image (optional - for testing when WMS is down)
+# MOCK_SATELLITE_IMAGE_URL=https://via.placeholder.com/800x800.jpg?text=Mock+Satellite+Image
+
+
+# ========================================
+# frontend/.env.example
+# ========================================
+
+# Frontend API configuration
+REACT_APP_API_URL=http://localhost:3001/api
+REACT_APP_ENVIRONMENT=development
+
+# Optional: API key if backend requires authentication
+REACT_APP_API_KEY=
