--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,3 +1,10 @@
+# ========================================
+# frontend/.env.example
+# ========================================
+
+# Frontend API configuration
 REACT_APP_API_URL=http://localhost:3001/api
 REACT_APP_ENVIRONMENT=development
+
+# Optional: API key if backend requires authentication
 REACT_APP_API_KEY=
