--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,22 +1,26 @@
-# ========================================
 # backend/.env.example
-# ========================================
 
-# Backend environment variables
+# Environment
 NODE_ENV=development
 PORT=3001
+
+# CORS - sett til frontend URL i produksjon
+# Development: http://localhost:3000
+# Production: https://sunpool-takanalyse-frontend.onrender.com
 CORS_ORIGIN=http://localhost:3000
+
+# API Access (optional)
 API_ACCESS_KEY=
 
-# API Base URL (brukes for å generere proxy URLs til satellittbilder)
-# Lokal utvikling:
+# API Base URL for satellittbilder
+# Development:
 API_BASE_URL=http://localhost:3001/api
-# Produksjon (Render):
-# API_BASE_URL=https://solar-assessment-backend.onrender.com/api
+# Production (Render):
+# API_BASE_URL=https://sunpool-takanalyse-backend.onrender.com/api
 
 # Rate limiting
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=100
+RATE_LIMIT_MAX_REQUESTS=200
 
 # Weather & caching
 WEATHER_CACHE_TTL_MS=3600000
@@ -30,5 +34,5 @@ KARTVERKET_ELEVATION_API=https://ws.geonorge.no/hoydedata/v1
 # Mock mode (set to true for development without external API access)
 MOCK_EXTERNAL_APIS=false
 
-# Midlertidig mock-bilde for testing
-MOCK_SATELLITE_IMAGE_URL=https://placehold.co/800x800/e3f2fd/1976d2?text=Building+Roof+View
+# Mock satellite image URL (optional - for when WMS is down)
+# MOCK_SATELLITE_IMAGE_URL=https://placehold.co/800x800/e3f2fd/1976d2?text=Building+Roof
