Configure satellite image base URLs

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -4,6 +4,7 @@
 
 # Frontend API configuration
 REACT_APP_API_URL=http://localhost:3001/api
+REACT_APP_API_BASE_URL=http://localhost:3001/api
 REACT_APP_ENVIRONMENT=development
 
 # Optional: API key if backend requires authentication
