Enhance satellite diagnostics logging and monitoring

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -36,3 +36,6 @@ MOCK_EXTERNAL_APIS=false
 
 # Mock satellite image URL (optional - for when WMS is down)
 # MOCK_SATELLITE_IMAGE_URL=https://placehold.co/800x800/e3f2fd/1976d2?text=Building+Roof
+
+# Satellite diagnostics endpoints (enable in staging/production when needed)
+ENABLE_SATELLITE_DIAGNOSTICS=false
